--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h2>E.E.WANDA MASCAGNI DE SÁ</h2>
         </div>
         <div class="header">
-            <h1>Atividade Avaliativa DE ciências</h1>
+            <h1>Atividade Avaliativa De Ciências</h1>
         </div>
 
         <form id="Página1">
@@ -359,7 +359,7 @@ Discuta como o conhecimento científico e as tradições culturais podem coexist
 
             try {
                 const response = await fetch(
-                    'https://script.google.com/macros/s/AKfycbx1Mam4bo2KTqduz9aUCVirnFj-tz3VSF6NVFSkIHADWdMMJhtAlZKw5C4ZWA4uowEh/exec',
+                    'https://script.google.com/macros/s/AKfycbyzmidkOccdi7FEUZbcSBlxXvKlwYOodfcQM-p5Nd-gVI8AXbKJq2hxi7wcC_1UChaj/exec',
                     {
                         method: 'POST',
                         headers: {
